# ai-mcp-payments

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
config/: default.yaml
src/: main.py  payments_mcp_service.py
tests/: test_server.py
